--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,6 +1,9 @@
 <section class="todoapp">
   <header class="header">
     <h1>todos</h1>
+    <form id="new-form">
+      <input type="text" class="new-todo" />
+    </form>
   </header>
 
   <section class="main">
@@ -11,37 +14,52 @@
 </section>
 
 
-<script>
+  <script>
   $(function() {
-    $.get("/tasks").success( function( data ) {
-      var htmlString = "";
-       $.each(data, function(index,  task) {
-        var checkedStatus = task.done ? "checked" : "";
-        var liElement = '<li><div class="view"><input class="toggle" type="checkbox"' +
+    $('#new-form').submit(function(event) {
+      event.preventDefault();
+      var textbox = $('.new-todo');
+      console.log("Task: ", textbox.val());
+    });
+
+    function taskHtml(task) {
+      var checkedStatus = task.done ? "checked" : "";
+      var liElement = '<li><div class="view"><input class="toggle" type="checkbox"' +
         " data-id='" + task.id + "'" +
         checkedStatus +
         '><label>' +
          task.title +
          '</label></div></li>';
-        htmlString += liElement;
+
+      return liElement;
+    }
+    function toggleTask(e) {
+      var itemId = $(e.target).data("id");
+
+
+      var doneValue = Boolean($(e.target).is(':checked'));
+
+
+      $.post("/tasks/" + itemId, {
+        _method: "PUT",
+        task: {
+          done: doneValue
+        }
+      });
+    }
+
+    $.get("/tasks").success( function( data ) {
+      var htmlString = "";
+
+      $.each(data, function(index,  task) {
+        htmlString += taskHtml(task);
       });
       var ulTodos = $('.todo-list');
       ulTodos.html(htmlString);
 
-      $('.toggle').change(function(e) {
-        var itemId = $(e.target).data("id");
-        console.log(itemId);
+      $('.toggle').change(toggleTask);
 
-        var doneValue = Boolean($(e.target).is (':checked'));
-        console.log("done:", doneValue);
-
-        $.post("/tasks/" + itemId, {
-          _method: "PUT",
-          task: {
-            done: doneValue
-          }
-        });
-      });
     });
   });
 </script>
+
